--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 29.10.2024 09:03:54</small><a id="top"></a><table ><nav id="lunchbar"><ul><li><a href="#naLedarnach" >NA LEDARNACH</a></li></ul><ul><li><a href="#Mates" >MATES</a></li></ul><ul><li><a href="#Kuta" >KUTA</a></li></ul><ul><li><a href="#liskaBistrouska" >LIŠKA BISTROUŠKA</a></li></ul><ul><li><a href="#Rybarna" >RYBARNA</a></li></ul><ul><li><a href="#uCejpu" >U Čejpů</a></li></ul><ul><li><a href="#poctivaRestaurace" >Poctivá restaurace</a></li></ul><ul><li><a href="#CSAntal" >ČS Antal</a></li></ul><ul><li><a href="#zelenyPruhJidelna" >Zelený pruh</a></li></ul><ul><li><a href="#youyouge" >Čína(2)</a></li></ul></nav >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 29.10.2024 09:36:11</small><a id="top"></a><table ><nav id="lunchbar"><ul><li><a href="#naLedarnach" >NA LEDARNACH</a></li></ul><ul><li><a href="#Mates" >MATES</a></li></ul><ul><li><a href="#Kuta" >KUTA</a></li></ul><ul><li><a href="#liskaBistrouska" >LIŠKA BISTROUŠKA</a></li></ul><ul><li><a href="#Rybarna" >RYBARNA</a></li></ul><ul><li><a href="#uCejpu" >U Čejpů</a></li></ul><ul><li><a href="#poctivaRestaurace" >Poctivá restaurace</a></li></ul><ul><li><a href="#CSAntal" >ČS Antal</a></li></ul><ul><li><a href="#zelenyPruhJidelna" >Zelený pruh</a></li></ul><ul><li><a href="#youyouge" >Čína(2)</a></li></ul></nav >
 <table>
 <section id="naLedarnach"></section><tr><th>NA LEDARNACH<br><a href="https://www.senkyrna.cz/senkyrna-na-ledarnach/denni-nabidka">https://www.senkyrna.cz/senkyrna-na-ledarnach/denni-nabidka</a></th></tr>
 <tr>
@@ -74,7 +74,27 @@
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
 <div class="nadpis">Úterý 29.10.2024 </div>
 <ul>
-<li class="polevka">Pro tento den nebylo zadáno menu.</li> </ul>
+<span class="popup-gallery"><li class="polevka">
+<div class="polozka">Zeleinová</div>
+<div class="cena">45 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">1. </span>300g Bramborové noky s brynzou a slaninou</div>
+<div class="cena">140 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">2. </span>300g srbské rizoto sypané sýrem, kyselá okurka</div>
+<div class="cena">140 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">3. </span>100g Salát s uzeným lososem </div>
+<div class="cena">150 Kč</div>
+<div class="clear"></div>
+</li>
+</span> </ul>
 </div>
 </td>
 </tr>
@@ -83,7 +103,7 @@
 <section id="Rybarna"></section><a href="#top">&#8635;</a><tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny filet z atlanticke makrely s citronem a petrzelkovym pestem, indicky dal z cervene cocky s rajcaty a zelenymi bylinkami 169</li><li>Peceny filet z cerstveho africkeho sumecka s citronem a petrzelkovym pestem, indicky dal z cervene cocky s rajcaty a zelenymi bylinkami 199</li><li>Thajske kari s kurecim masem, pecenou dyni a kokosovym mlekem, jasminova ryze, salatek 169</li><li>Spagety s nudlickami hoveziho rumpsteaku, pecenymi paprikami, paprickami jalapenos, petrzelkou a zralou goudou {L} 199</li><li>Kapustove placicky se   spetkou muskatu, stouchane brambory se smazenou cibulkou, pikantni tatarska omacka {L} 169</li></ol>
+<ol><li>Peceny filet z atlanticke makrely s citronem a petrzelkovym pestem, indicky dal z cervene cocky s rajcaty a zelenymi bylinkami, salatek 169</li><li>Peceny filet z cerstveho africkeho sumecka s citronem a petrzelkovym pestem, indicky dal z cervene cocky s rajcaty a zelenymi bylinkami, salatek 199</li><li>Thajske kari s kurecim masem, pecenou dyni a kokosovym mlekem, jasminova ryze, 169</li><li>Spagety s nudlickami hoveziho rumpsteaku, pecenymi paprikami, paprickami jalapenos, petrzelkou a zralou goudou {L} 199</li><li>Kapustove placicky se   spetkou muskatu, stouchane brambory se smazenou cibulkou, pikantni tatarska omacka {L} 169</li></ol>
 </td>
 </tr>
 </table>
